fix(app): remove overflow

--- a/app/app-diff.css
+++ b/app/app-diff.css
@@ -9,6 +9,10 @@ html, body, .canvas {
 
 }
 
+.djs-container {
+	overflow: hidden;
+}
+
 #canvas_old {
 	padding-right: 20px;
 }
